# chile-hub

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_LICENSES.md  LICENSE  Makefile  README.md  SECURITY.md  SOURCE_OF_TRUTH.md  app.js  dev-requirements.txt  index.html  mkdocs.yml  playground.js  privacy.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  skills-lock.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dataset_request.yml
.github/workflows/: adoption-stats.yml  codeql.yml  dependency-review.yml  monthly-scrape.yml  pages-deploy.yml  pipeline-check.yml  pypi-release.yml  testpypi.yml
contracts/datasets/: autoridades_electas.schema.json  autoridades_locales.schema.json  censo_comunal.schema.json  censo_hogares_viviendas.schema.json  comunas.schema.json  comunas_enriquecidas.schema.json  consumo_electrico_comunal.schema.json  delincuencia_comunal.schema.json  distritos_electorales.schema.json  empresas.schema.json  establecimientos_educacionales.schema.json  establecimientos_salud.schema.json  finanzas_municipales.schema.json  geometria_comunal.schema.json  indicadores.schema.json  indicadores_urbanos_siedu.schema.json  partidos_politicos.schema.json  perfil_territorial_comunal.schema.json  pobreza_comunal.schema.json  provincias.schema.json  regiones.schema.json  resultados_educacionales.schema.json
data/: dataset_catalog_config.json  source_registry.json
data/normalized/: artifact_manifest.json  autoridades_electas.json  autoridades_electas.parquet  censo_comunal.json  censo_comunal.parquet  censo_hogares_viviendas.json  censo_hogares_viviendas.parquet  chile-hub-publishable-bundle.zip.sha256  comunas.json  comunas.parquet  comunas_enriquecidas.json  comunas_enriquecidas.parquet  consumo_electrico_comunal.json  consumo_electrico_comunal.parquet  coverage_badge.json  datapackage.json  dataset_catalog.json  dataset_catalog.md  dataset_changelog.json  dataset_quality.json  dataset_quality.md  dataset_status.json  distritos_electorales.json  distritos_electorales.parquet  drift_report.json  drift_report.md  establecimientos_educacionales.json  establecimientos_educacionales.parquet  establecimientos_salud.json  establecimientos_salud.parquet  finanzas_municipales.json  finanzas_municipales.parquet  freshness_badge.json  hub_bundle.json  hub_health.json  hub_health.md  hub_status.json  indicadores.parquet  indicadores_hoy.json  overview.json  (+21 more)
data/raw/: sinim_finanzas_municipales_20260708T192459Z.xlsx
data/staging/: finanzas_municipales.csv  finanzas_municipales.metadata.json
docs/: api.md  case-study-construccion-chile-hub.md  ci-log-audit-2026-07-07.md  ci-log-audit-2026-07-08-rerun.md  dataset-compatibility-policy.md  dataset-inclusion-criteria.md  gate-4-3-decision-playground.md  index.md  installation.md  linkedin-post-caso-de-estudio.md  product-spec.md  r-quickstart.md  release.md  versioning-policy.md
docs/adr/: ADR-006-comunal-coverage-decision.md  ADR-007-sql-query-surface.md  ADR-008-datapackage-consumer-validation.md  ADR-011-estrategia-construir-por-delante-de-demanda.md  ADR-012-geometria-comunal-y-reverse-geocoding.md
docs/backlog/: 01-refactor-build-dev-db.md  06-api-error-handling.md  07-api-capabilities.md  08-evaluacion-producto-comercial.md  NEXT_STEPS.md  scorecard.md
docs/dataset-ideas/: README.md  consumo-electrico-comunal.md  delincuencia-cead.md  electoral-results-authorities-parties.md  entrepreneurship-support-programs.md  plus-codes-road-reference-layer.md  pobreza-comunal-casen.md
docs/datasets/: README.md  autoridades_electas.md  autoridades_locales.md  censo_comunal.md  censo_hogares_viviendas.md  comunas.md  comunas_enriquecidas.md  (+13 more)
examples/: demo_usage.py  python_helper_usage.py
plans/: 001-fix-landing-page-bugs.md  001-limpiar-y-pinear-deps.md  002-cache-ci.md  002-csp-landing-page.md  003-guard-metadata-json.md  004-cleanup-dependencies.md  004-xss-tabla-comunas.md  005-eliminate-redundant-build-writes.md  005-tests-invariantes-y-validadores.md  006-consolidate-duplicated-logic.md  006-tests-fallback-indicadores.md  007-tooling-improvements.md  008-hardening-source-readiness-schema-contracts-quality.md  009-centralizar-registro-datasets.md  009-split-stable-publishable-and-candidate-tracks.md  010-fix-extractor-and-validation-bugs.md  011-harden-api-error-handling.md  011-linter-formatter.md  012-capa-enriquecimiento-territorial.md  013-api-performance-caching.md  013-base-extractor-template.md  014-architecture-cleanup.md  015-test-robustness.md  016-ci-staging-cache.md  017-new-api-capabilities.md  020-duckdb-wasm-playground.md  021-mkdocs-api-docs.md  022-plan-avance-narrativa-confiabilidad.md  023-autoridades-electas-partidos-politicos.md  025-sync-dataset-enum-and-docs-with-catalog.md  029-fix-misplaced-docstrings-core.md  030-excel-large-table-guard-and-bundle-sha-dedup.md  034-fix-monthly-scrape-workflow.md  035-characterization-tests-publish-gate.md  039-design-resolve-sparse-comunal-layers.md  043-sql-explorer-result-overflow.md  045-dataset-badge-monthly-color.md  046-privacy-page-brand-consistency.md  047-fix-space-lg-and-fira-code-fallback.md  050-resolve-comunas-name-to-cut.md  (+13 more)
plans-completed/: 003-cron-refresh-diario.md  008-pre-validar-artefactos-zip.md  010-deduplicar-helpers.md
scripts/: build_geometria_comunal.py  check_companion_paths.py  check_validation_registration.py  fetch_adoption_stats.py  generate_freshness_badge.py  package_publishable_bundle.py  pipeline_status.py  sync_docs.py  sync_release_artifact_version.py  usage_snapshot.py  verify_landing.py  verify_pipeline.py
src/: __init__.py  build_dev_db.py  chile_hub.py  pipeline_status_utils.py  validation.py
tests/: test_builders_artifacts.py  test_builders_formats.py  test_chile_hub.py  test_ci_config.py  test_core.py  test_data_package.py  test_extractors.py  test_packaging_runtime.py  test_pipeline_logic.py  test_render.py  test_validation.py  test_verify_pipeline.py
(+91 files in other folders)
