[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "chile-hub"
version = "1.19.4"
description = "Datos públicos de Chile curados, normalizados y validados: geografía, demografía, economía, salud, educación, finanzas municipales, indicadores urbanos y distritos electorales. Listos para consumir en una línea de código con Polars, DuckDB, SQLite y Excel."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [
    { name = "Carlos Ortega" },
]
keywords = [
    "chile",
    "datasets",
    "open-data",
    "polars",
    "duckdb",
    "public-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "polars>=1.41.2",
    # Required by Polars DataFrame.to_pandas() during artifact builds.
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "platformdirs>=4.10.0",
    "rich>=14.0",
    "rutificador>=1.5.8",
    "openpyxl>=3.1.5",
    "duckdb>=1.5.4",
    "tenacity>=9.1.4",
]


[project.optional-dependencies]
pipeline = [
    "duckdb==1.5.4",
    "pandas==3.0.3; python_version >= '3.11'",
    "xlsxwriter==3.2.9",
    "curl_cffi==0.15.0",
    "openpyxl==3.1.5",
    "structlog==26.1.0",
    "rutificador>=1.5.8",
    "tenacity==9.1.4",
]
dev = [
    "build==1.5.0",
    "twine==6.2.0",
    "python-semantic-release==10.6.1",
    "playwright==1.61.0",
    "ruff==0.15.20",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pre-commit==4.6.0",
    "mypy==2.1.0",
    "pip-audit==2.10.1",
    "interrogate==1.7.0",
    "pytest-xdist==3.8.0",
    "hypothesis==6.156.1",
    "bandit==1.9.4",
    "structlog==26.1.0",
    "frictionless>=5.18,<6",
    "mkdocs-material==9.7.6",
    "mkdocstrings[python]==1.0.4",
]

# Extractores que necesitan fetch stealth/anti-403 (p. ej. distrito de diputados en
# camara.cl para autoridades_electas). Se aísla en su propio extra porque scrapling
# exige click>=8.3, incompatible con el click<8.2 de python-semantic-release (dev).
# El extractor importa scrapling de forma perezosa y degrada si no está instalado.
scraping = [
    "scrapling[fetchers]>=0.4.10",
]

[tool.uv]
# dev y scraping no pueden coexistir (conflicto de click via semantic-release vs
# scrapling); uv los resuelve en forks separados del lockfile.
conflicts = [
    [{ extra = "dev" }, { extra = "scraping" }],
]

[project.scripts]
chile-hub = "chile_hub.cli:main"

[project.urls]
Homepage = "https://tooltician.com/chile-hub/"
Repository = "https://github.com/cortega26/chile-hub"
Issues = "https://github.com/cortega26/chile-hub/issues"
Documentation = "https://github.com/cortega26/chile-hub#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/chile_hub"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/chile_hub",
    "/src/chile_hub.py",
    "/README.md",
    "/LICENSE",
    "/DATA_LICENSES.md",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
# __init__.py reads the version dynamically from pyproject.toml at runtime —
# no static variable to update.  pyproject.toml is the single source of truth.
branch = "main"
tag_format = "v{version}"
build_command = "python -m build"
upload_to_vcs_release = true
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.changelog]
mode = "update"
template_dir = "templates"
exclude_commit_patterns = [
    "^chore\\(data\\):",
    "^chore\\(release\\):",
    "^docs\\(backlog\\):",
    "^docs\\(plans\\):",
    "^data:",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.chile_hub]
public_site_url = "https://tooltician.com/chile-hub/"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = [
    "E501",
    "E402",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests", "Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
# TC-02: se mide todo el pipeline (src/), no solo la librería src/chile_hub. Antes se
# medía ~5% del código (solo la librería) dando un ~84% vanidoso; ahora la cobertura es
# honesta sobre builders/extractors/validation/build_dev_db (~50% real). Subirla es un
# follow-up de backfill de tests.
source = ["src"]
omit = [
    "src/chile_hub/__main__.py",
    "src/chile_hub/cli.py",
    "src/chile_hub/pipeline_status_utils.py",
    "src/chile_hub.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "def __repr__",
    'if __name__ == "__main__":',
]

[tool.mypy]
python_version = "3.10"
files = [
    "src/chile_hub",
    "src/extractors",
    "src/validation.py",
    "src/build_dev_db.py",
    "src/builders",
]
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
# El shim src/chile_hub.py (21 líneas) colisiona con el paquete src/chile_hub/;
# mypy lo detecta como módulo duplicado. Lo excluimos porque solo delega al
# paquete y no contiene lógica que requiera verificación de tipos.
exclude = ["src/chile_hub\\.py"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "src.extractors.*"
disable_error_code = ["no-redef"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
# Umbral bajo en pre-commit: no bloquea commits, solo informa.
# Usa 'make docs-coverage' para verificar el umbral estricto (80%).
fail-under = 0
paths = ["src/chile_hub"]
exclude = ["src/chile_hub/pipeline_status_utils.py", "src/chile_hub/__main__.py"]

[tool.bandit]
# Los extractores necesitan subprocess/HTTP/filesystem por diseño.
# La superficie de ataque real está en la librería core y el pipeline.
exclude_dirs = ["src/extractors", "tests", "scripts", "data"]
# Umbral mínimo: solo falla en Medium o High.
severity-level = "medium"
confidence-level = "medium"
